--- a/config/order-service-master.yml
+++ b/config/order-service-master.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8881
+  port: 8882
 
 eureka:
   client:
@@ -7,6 +7,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 fegin:
-  orderService: order-service
+  userService: user-service
 
-description: 我(test分支)是
+description: 订单服务(master分支)
