--- a/config/user-service-master.yml
+++ b/config/user-service-master.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8882
+  port: 8881
 
 eureka:
   client:
@@ -7,6 +7,6 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 
 fegin:
-  userService: user-service
+  orderService: order-service
 
-description: 订单服务(dev分支)
+description: 我(master分支)是
