--- a/config/user-service-test.yml
+++ b/config/user-service-test.yml
@@ -6,7 +6,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
-fegin:
+feign:
   orderService: order-service
 
 description: 我(test分支)是
