--- a/config/order-service-master.yml
+++ b/config/order-service-master.yml
@@ -6,7 +6,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8761/eureka/
 
-fegin:
+feign:
   userService: user-service
 
 description: 订单服务(master分支)
